yml/3_contrail-cni-features/3_ingress/nginx-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx-deployment
  ports:
  - protocol: TCP
    port: 80
